--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "3d0dae4a-d0ce-400f-add5-31ee3cccaa25"
 authors = ["Tom Trogdon"]
 version = "0.1.0"
 
+[deps]
+ApproxFunBase = "fbd15aa5-315a-5a7d-a8a4-24992e37be05"
+ApproxFunFourier = "59844689-9c9d-51bf-9583-5b794ec66d30"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+
 [compat]
 julia = "1"
 
