--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,10 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
 julia = "1"
+FFTW = "1"
+ApproxFunBase = "0.3"
+ApproxFunFourier = "0.1"
+Reexport = "0.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
