Added code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
+codecov: true
+coveralls: true
 os:
   - linux
   - osx
@@ -16,8 +18,8 @@ notifications:
   email: false
 after_script:
   - bash ./docs/travis.sh
-after_success:
-  - julia -e 'cd(Pkg.dir("ApproxFunRational")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+#after_success:
+#  - julia -e 'cd(Pkg.dir("ApproxFunRational")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 
 
 # uncomment the following lines to override the default test script
