--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Tom Trogdon"]
 version = "0.1.0"
 
 [deps]
+ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
 ApproxFunBase = "fbd15aa5-315a-5a7d-a8a4-24992e37be05"
 ApproxFunFourier = "59844689-9c9d-51bf-9583-5b794ec66d30"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
@@ -11,12 +12,12 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
-julia = "1"
-FFTW = "0.3, 1"
-ApproxFun = ">=0.11"
 ApproxFunBase = ">=0.2"
+ApproxFun = ">=0.11"
 ApproxFunFourier = "0.1"
+FFTW = "0.3, 1"
 Reexport = "0.2"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
