--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
 ApproxFun = ">=0.11"
+ApproxFunOrthogonalPolynomials = ">=0.2.5"
 ApproxFunBase = ">=0.2"
 ApproxFunFourier = "0.1"
 FFTW = "0.3, 1"
