--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
 ApproxFun = "0.11.8"
-ApproxFunOrthogonalPolynomials = "0.2.5"
+ApproxFunOrthogonalPolynomials = "0.2.5, 0.3"
 ApproxFunBase = "0.2"
 ApproxFunFourier = "0.1,0.2"
 FFTW = "0.3, 1"
