--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ ApproxFunOrthogonalPolynomials = "0.2.5, 0.3, 0.4"
 ApproxFunBase = "0.2, 0.4"
 ApproxFunFourier = "0.1, 0.2"
 FFTW = "0.3, 1"
-Reexport = "0.2"
+Reexport = "0.2, 1"
 julia = "1"
 MacroTools = "0.5"
 
